# primal-core

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ATLAS_ROADMAP.md  CONDUCTOR_ROADMAP.md  CONTINUITY_ROADMAP.md  GUARDIAN_ROADMAP.md  HARNESS_ROADMAP.md  PRIMAL_ROADMAP.md  STORAGE_ROADMAP.md  TRAJECTORY_ROADMAP.md  VERIFIER_ROADMAP.md  launch-draft.md  observability.md
src/primal_ai/: __init__.py  _events.py  _jsonschema.py  _trajectory_context.py  conductor.py  guardian.py  trajectory.py
src/primal_ai/atlas/: __init__.py  _decision.py  _health.py  _provider.py  _registry.py  bandit.py  cascade.py  router.py
src/primal_ai/conductor/: __init__.py  _agent.py  _card.py  _core.py  _delegation.py  _events.py  _pipeline.py  _registry.py
src/primal_ai/continuity/: __init__.py  _core.py  autolearn.py  profile.py
src/primal_ai/guardian/: __init__.py  _combinators.py  _core.py  _dsl.py  _policy.py
src/primal_ai/guardian/_builtins/: __init__.py  allow_list.py  block_list.py  dollar_cap.py  pii_redact.py  rate_limit.py  schema_validator.py
src/primal_ai/harness/: __init__.py  _core.py  discovery.py  health.py  loader.py  scheduler.py
src/primal_ai/observability/: __init__.py  _otel.py
src/primal_ai/storage/: __init__.py  memory.py  postgres.py  redis_store.py  sqlite.py
src/primal_ai/trajectory/: __init__.py  _core.py  _status.py  _step.py
src/primal_ai/verifier/: __init__.py  _core.py  _protocol.py  _verdict.py  domain.py  llm_judge.py  rule_based.py
tests/: conftest.py  test_atlas.py  test_atlas_bandit.py  test_conductor.py  test_continuity.py  test_guardian.py  test_harness.py  test_imports.py  test_observability_atlas.py  test_observability_conductor.py  test_observability_guardian.py  test_observability_integration.py  test_observability_shim.py  test_observability_trajectory.py  test_observability_verifier.py  test_storage_memory.py  test_storage_sqlite.py  test_trajectory.py  test_verifier.py  test_version.py
