[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "primal-ai"
version = "0.0.1"
description = "The reliability and interoperability layer for AI agents. A2A-native. MCP-bridged."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "K", email = "k@primalaiagents.com" }]
keywords = ["ai", "agents", "reliability", "observability", "a2a", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "mypy>=1.10", "ruff>=0.5"]

[project.urls]
Homepage = "https://primalaiagents.com"
Repository = "https://github.com/primalaiagents/primal-core"

[tool.hatch.build.targets.wheel]
packages = ["src/primal_ai"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "RET", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
