[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "primal-ai"
version = "0.2.0"
description = "The reliability and interoperability layer for AI agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Kunal Chetri", email = "kunalchetri1990@gmail.com" }]
keywords = ["ai", "agents", "reliability", "observability", "a2a", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
otel = ["opentelemetry-api>=1.20"]
dev = [
    "pytest>=8",
    "mypy>=1.10",
    "ruff>=0.5",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.urls]
Homepage = "https://primalaiagents.com"
Repository = "https://github.com/primalaiagents/primal-core"
Issues = "https://github.com/primalaiagents/primal-core/issues"
Changelog = "https://github.com/primalaiagents/primal-core/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/primal_ai"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "RET", "SIM"]

[tool.ruff.lint.flake8-builtins]
# ``input`` is a deliberate parameter name in the Conductor/Agent public API
# (Conductor.delegate(..., input=...), Agent.invoke(input)). Documenting the
# allowlist here rather than scattering ``# noqa`` over every call site.
builtins-ignorelist = ["input"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
